objects/CMPL123QMS__Global_Change_Assessment__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123QMS__Assessment__c</fullName>
        <label>Assessment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Assigned_To_Me__c</fullName>
        <formula>CMPL123QMS__Assigned_To__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Global_Change_Assessments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Global_Change_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Change Control</label>
        <referenceTo>CMPL123QMS__Global_Change_Control__c</referenceTo>
        <relationshipLabel>Global Change Assessments</relationshipLabel>
        <relationshipName>Global_Change_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Impact__c</fullName>
        <label>Impact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Impacted_Site__c</fullName>
        <label>Impacted Site</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Site 1</fullName>
                </value>
                <value>
                    <fullName>Site 2</fullName>
                </value>
                <value>
                    <fullName>Site 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Implement_Local_Change_Control__c</fullName>
        <label>Implement Local Change Control?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Local_Change_Control_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Change Control Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Global_Change_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Global Change Assessment</label>
    <listViews>
        <fullName>CMPL123QMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GCA-{00000}</displayFormat>
        <label>Global Change Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Global Change Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CMPL123QMS__Due_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CMPL123QMS__Due_Date__c &lt; TODAY(), OR( ISNEW(), ISCHANGED(CMPL123QMS__Due_Date__c)))</errorConditionFormula>
        <errorDisplayField>CMPL123QMS__Due_Date__c</errorDisplayField>
        <errorMessage>Due Dates cannot be populated with a data in the past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123QMS__Local_Change_Control_Owner</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( CMPL123QMS__Implement_Local_Change_Control__c , "Yes"), ISBLANK( CMPL123QMS__Local_Change_Control_Owner__c),False )</errorConditionFormula>
        <errorDisplayField>CMPL123QMS__Local_Change_Control_Owner__c</errorDisplayField>
        <errorMessage>Local Change Control Owner is required when Implement Local Change Control? is populated with a value of Yes.</errorMessage>
    </validationRules>
</CustomObject>